@@ -684,14 +684,23 @@ CONFIG_EXAMPLE_NETTEST_CLIENTIP=(10<<24|0<<16|0<<8|1)
 # Settings for examples/buttons
 #
 # CONFIG_EXAMPLE_BUTTONS_MIN and CONFIG_EXAMPLE_BUTTONS_MAX
-#   Lowest and highest button number
+#   Lowest and highest button number (0-7)
 # CONFIG_EXAMPLE_IRQBUTTONS_MIN and CONFIG_EXAMPLE_IRQBUTTONS_MAX
-#   Lowest and highest interrupting button number
+#   Lowest and highest interrupting button number (-7)
+# CONFIG_EXAMPLE_BUTTONS_NAMEn - Name for button n
 #
 CONFIG_EXAMPLE_BUTTONS_MIN=0
 CONFIG_EXAMPLE_BUTTONS_MAX=7
 CONFIG_EXAMPLE_IRQBUTTONS_MIN=2
 CONFIG_EXAMPLE_IRQBUTTONS_MAX=7
+CONFIG_EXAMPLE_BUTTONS_NAME0="WAKEUP"
+CONFIG_EXAMPLE_BUTTONS_NAME1="TAMPER"
+CONFIG_EXAMPLE_BUTTONS_NAME2="KEY"
+CONFIG_EXAMPLE_BUTTONS_NAME3="SELECT"
+CONFIG_EXAMPLE_BUTTONS_NAME4="DOWN"
+CONFIG_EXAMPLE_BUTTONS_NAME5="LEFT"
+CONFIG_EXAMPLE_BUTTONS_NAME6="RIGHT"
+CONFIG_EXAMPLE_BUTTONS_NAME7="UP"
 
 #
 # Settings for examples/ostest
